# Impact

./: .eleventy.js  .gitignore  LICENSE  Makefile  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml
content/: asset_manager_lps.yml  bank_lps.yml  cooperative_ngo_lps.yml  corporate_lps.yml  deadlines.yml  dfi_ingo_commitments.yml  family_office_lps.yml  foundation_lps.yml  government_donor_lps.yml  peer_funds.yml  pension_fund_lps.yml
docs/advice_new_site/: 01_project_concept.md  02_data_model.md  03_project_structure.md  04_pipelines.md  05_dashboard_and_webapp.md  06_lessons_learned.md  07_first_steps.md  README.md
network/: run_state.json
network/catalogue/: impact_funds.csv  ingos.csv  investor_aliases.csv  investors.csv  portfolio_companies.csv
network/dashboard_prep/: dismissed_warm_leads.csv  fund_investments.csv  fund_lps.csv  manual_matches.csv  master_id_registry.csv  master_slug_registry.csv  portco_investors.csv
network/docs/: discovery_skip_list.csv  foundation_edge_attempts.csv
network/portco_investor_scraping/: portco_investor_scrape_history.csv
network/scripts/: apply_name_changes.py  clean_agdevco_names.py  clean_company_names.py  (+1 more)
pipeline/: __init__.py  aggregate.py  build_slots.py  emit.py  entities.yml  health.py  normalize.py  run.py  schemas.py  sources.yml
scripts/: check_urls.py  null_broken_urls.py
tests/: conftest.py  test_api_scraper.py  test_build_slots.py  test_case_d.py  test_html_scraper.py  test_incident_schema.py  test_lp_registries.py  test_no_private_leak.py  test_schemas.py
(+148 files in other folders)
