[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ingo-first-close"
version = "0.1.0"
description = "Local-first tool for INGO fund teams getting to first close."
requires-python = ">=3.11,<3.13"
dependencies = [
  "feedparser==6.0.11",
  "httpx[http2]==0.28.1",
  "selectolax==0.3.30",
  "beautifulsoup4==4.13.3",
  "pydantic==2.10.6",
  "pyyaml==6.0.2",
  "python-dateutil==2.9.0",
  "markdown-it-py==3.0.0",
  "hishel==0.1.3",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-cov==6.0.0",
  "ruff==0.9.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*", "network*"]
exclude = ["tests*", "site*", "tool*", "user*", "content*", "team*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
